@@ -71,6 +71,10 @@ base dc=padl,dc=com
 # for the number of seconds specified below.
 #idle_timelimit 3600
 
+# Pagesize: when configured with --enable-paged-results allow
+# to set the pagesize to a custom value
+#pagesize 1000
+
 # Filter to AND with uid=%s
 #pam_filter objectclass=account
 
